feat(user): can update their profile
- users can edit their profile

- users can upload profile picture

- users can add bio

- write mock test for image upload

- remove hound flagging for `console.log` statement

- refactor multer to upload files from memory

- install datauri to convert memory buffers to data url

[(Delivers ) #159987404]
