# server/routes/userRoutes.js
@@ -1,6 +1,5 @@
 import express from 'express';
 import userController from '../controllers/userController';
-
 import auth from '../middleware/auth';
 import usersValidations from '../middleware/usersValidations';
 
@@ -12,4 +11,7 @@ userRoutes.post('/auth/signup', validateSignUp, userController.signUp);
 userRoutes.post('/auth/login', validateLogin, userController.login);
 userRoutes.put('/verify/:token', auth, userController.verify);
 userRoutes.get('/all', auth, userController.allUsers);
+userRoutes.put('/update', auth, userController.updateProfile);
+userRoutes.get('/:userId', auth, userController.getUserProfile);
+
 export default userRoutes;
